Mod backport to 1.16.4+